[metadata]
name = chain-factory
version = 0.0.1
author = Lukas Lüdke
author_email = lukasluedke@web.de
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/llxp/chain-factory
project_urls =
    Bug Tracker = https://github.com/llxp/chain-factory/issues
classifiers =
    Programming Language :: Python :: 3
    LICENSE :: OSI APPROVED :: GNU GENERAL PUBLIC LICENSE V3 (GPLV3)
    Operating System :: OS Independent
    Framework :: Flask
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src